maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: not found: value l
  for (i <- 0 to l) {
                 ^JediEscaper:13: error: not found: value L
    for (j <- 0 to L) {
                   ^JediEscaper:15: error: not found: value t
        return t=Array(i,j)
               ^